archived/manifests-ace/uptime.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   labels:
#     name: monitoring
#   name: monitoring
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - uptime.<path:stringreplacesecret#domain>
    secretName: uptime-cert
  rules:
  - host: uptime.<path:stringreplacesecret#domain>
    http:
      paths:
      - backend:
          service:
            name: uptime-kuma
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime.<path:stringreplacesecret#domain>
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: nginx.<path:stringreplacesecret#domain>
  sessionAffinity: None
